# human_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: human.rviz
launch/: robot_state_publisher.launch.py  show.launch.py  visualize.launch
scripts/: create_human_urdf.py
test/: test_description.launch.py  test_human.test
urdf/: human-tpl.xacro
