<package>
  <name>human_description</name>
  <version>1.0.0</version>
    <description>
        This package contains a parametric kinematic description of humans. 
        The files in this package are parsed and used by a variety of other 
        components, notably in the context of human-robot interaction.
        Most users will not interact directly with this package.
    </description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>BSD</license>

  <author>Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

</package>
